--- a/css/styles.css
+++ b/css/styles.css
@@ -99,13 +99,9 @@ nav {
   color: rgba(33, 150, 243, 1);
 }
 
-.contact > li > a:hover {
-  fill: rgba(33, 150, 243, 1);
-}
-
 #icon-smartphone,
 #icon-envelope {
-  fill: #757575;
+  fill: currentColor;
   cursor: pointer;
 }
 
