--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,7 @@ main {
 }
 
 .what-we-do-img {
+  position: relative;
   display: inline-block;
   flex-direction: row;
   justify-content: space-between;
@@ -278,6 +279,23 @@ main {
 
 .what-we-do-img:last-child {
   margin-right: 0;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 25%;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgba(255, 255, 255, 1);
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+  padding: 30px;
 }
 
 h2 {
