--- a/css/styles.css
+++ b/css/styles.css
@@ -587,7 +587,9 @@ button:hover {
 }
 
 .design-img {
+  position: relative;
   display: inline-block;
+  overflow: hidden;
   flex-direction: row;
   justify-content: space-between;
   border: 2px solid rgba(0, 0, 0, 0.2);
@@ -597,6 +599,31 @@ button:hover {
   cursor: pointer;
   transition: box-shadow 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.overlay-portfolio {
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.8); /* Półprzezroczysty kolor tła */
+  transition: bottom 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.overlay-portfolio span {
+  font-size: 18px;
+  line-height: 1.5;
+  text-align: left;
+  padding: 40px;
+}
+
+.design-img:hover .overlay-portfolio {
+  bottom: 0;
 }
 
 .design-img:hover {
